--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,5 @@ jobs:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BASE_BRANCH: master # The branch the action should deploy from.
         BRANCH: gh-pages-from-actions # The branch the action should deploy to.
-        FOLDER: AlgeriaConfirmedFlightWASM/build/wwwroot # The folder the action should deploy.
+        FOLDER: build/wwwroot # The folder the action should deploy.
         SINGLE_COMMIT: true
