--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
       run: dotnet publish --configuration Release --output build
       
    # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
-    - name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
-      run: sed -i 's/<base href="\/" \/>/<base href="\/AlgeriaConfirmedFlight\/" \/>/g' release/wwwroot/index.html
+    - name: Change base-tag in index.html from / to AlgeriaConfirmedFlight
+      run: sed -i 's/<base href="\/" \/>/<base href="\/AlgeriaConfirmedFlight\/" \/>/g' build/wwwroot/index.html
       
     - name: Deploy to Github Pages
       uses: JamesIves/github-pages-deploy-action@releases/v3
