--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Publish with dotnet
       run: dotnet publish --configuration Release --output build
       
-   # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
+   # changes the base-tag in index.html from '/' to 'AlgeriaConfirmedFlight' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to AlgeriaConfirmedFlight
       run: sed -i 's/<base href="\/" \/>/<base href="\/AlgeriaConfirmedFlight\/" \/>/g' build/wwwroot/index.html
       
